# ym

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  settings.rs
src/libs/: mod.rs  tools.rs  yagpt.rs
ym-tui/: Cargo.toml
ym-tui/src/: cli.rs  main.rs  settings.rs
ym-tui/src/app/: core.rs  events.rs  messaging.rs  mod.rs  ui.rs
ym-yagpt/: Cargo.toml
ym-yagpt/src/: client.rs  errors.rs  lib.rs  models.rs
